--- a/src/main/webapp/views/deployment-manager.html
+++ b/src/main/webapp/views/deployment-manager.html
@@ -19,13 +19,21 @@
 
   <div class="option-device-container">
 
-    <div class="option-device">
+    <div class="option-device"
+         ng-repeat="deployment in deployCtrl.getDeployments()"
+         ng-click="deployCtrl.selectDeployment(deployment)">
 
-      <div class="option-name-container" ng-click="deployCtrl.goToDeploymentInfo()">
+      <div class="option-name-container">
+        <span class="option-name">{{deployment.id}}</span>
+        <br class="jump-line">
+        <span class="option-platform">{{deployment.date}}</span>
+      </div>
+
+<!--      <div class="option-name-container" ng-click="deployCtrl.goToDeploymentInfo()">
         <span class="option-name">Installation Name</span>
         <br class="jump-line">
         <span class="option-platform">Date</span>
-      </div>
+      </div>-->
 
       <div class="option-buttons-container">
         <div class="square-option-device-button" ng-click="deployCtrl.goToUpdateDeployment()">
