Creado el createDeployments

--- a/src/main/webapp/views/create-deployment.html
+++ b/src/main/webapp/views/create-deployment.html
@@ -42,11 +42,16 @@
       <input type="text" placeholder="Platform Label" ng-model="createDeploy.platformLabel">
       <label class="form-label">Platform Label:</label>
 
-      <select ng-model="createDeploy.devices">
+      <input type="text" placeholder="Devices" ng-model="createDeploy.devices">
+      <label class="form-label">Devices:</label>
+
+
+     <!-- <select ng-model="createDeploy.devices">
         <option value="DEVICE">Device</option>
         <option value="SENSOR">Sensor</option>
         <option value="ACTUATOR">Actuator</option>
       </select>
+
       <label class="form-label">Devices:</label>
 
       <hr class="line">
@@ -73,7 +78,7 @@
       <label class="form-label">Sensor Id:</label>
 
       <input type="text" placeholder="Sensor Type" ng-model="createDeploy.sensorType">
-      <label class="form-label">Sensor Type:</label>
+      <label class="form-label">Sensor Type:</label>-->
 
       <hr class="line">
 
