--- a/src/main/webapp/views/update_device.html
+++ b/src/main/webapp/views/update_device.html
@@ -58,7 +58,7 @@
 
       <div class="button-container-form">
 
-      <button style="float: left" type="submit" class="info-button" ng-click="componentUpdate.updateDevice()">
+      <button style="float: left" type="submit" class="info-button" ng-click="componentUpdate.updateDeployment()">
         <span>Update</span>
       </button>
 
