--- a/src/main/webapp/views/add-maintenance.html
+++ b/src/main/webapp/views/add-maintenance.html
@@ -13,7 +13,7 @@
 
     <form class="add-form" name="add-device">
 
-      <select ng-model="addMaintenance.deployId">
+      <select ng-model="addMaintenance.id">
         <option value="DEVICE">Device</option>
         <option value="SENSOR">Sensor</option>
         <option value="ACTUATOR">Actuator</option>
