--- a/src/main/webapp/views/create-deployment.html
+++ b/src/main/webapp/views/create-deployment.html
@@ -13,14 +13,14 @@
 
     <form class="add-form" name="add-device">
 
-      <input type="text" placeholder="Id" ng-model="createDeploy.deployId">
+      <input type="text" placeholder="Id" ng-model="createDeploy.id">
       <label class="form-label">Id:</label>
 
       <div class="info-left padding-0">
         Date:
       </div>
       <div class="info-right padding-0">
-        {{createDeploy.deployDate | date: 'dd-MM-yyyy HH:mm:ss'}}
+        {{createDeploy.date | date: 'dd-MM-yyyy HH:mm:ss'}}
       </div>
 
       <input type="text" placeholder="Location" ng-model="createDeploy.location">
@@ -82,7 +82,7 @@
 
       <hr class="line">
 
-      <button type="submit" class="info-button" ng-click="createDeploy.createDeployment()">
+      <button type="submit" class="info-button" ng-click="createDeploy.updateDeployment()">
         <span>Create</span>
       </button>
 
