--- a/src/main/webapp/views/update-deployment.html
+++ b/src/main/webapp/views/update-deployment.html
@@ -13,14 +13,14 @@
 
     <form class="add-form" name="add-device">
 
-      <input type="text" placeholder="Id" ng-model="updateCtrl.deployId">
+      <input type="text" placeholder="Id" ng-model="updateCtrl.id">
       <label class="form-label">Id:</label>
 
       <div class="info-left">
         Date:
       </div>
       <div class="info-right">
-        {{updateCtrl.deployDate | date: 'dd-MM-yyyy HH:mm:ss'}}
+        {{updateCtrl.date | date: 'dd-MM-yyyy HH:mm:ss'}}
       </div>
 
       <input type="text" placeholder="Location" ng-model="updateCtrl.location">
@@ -42,7 +42,10 @@
       <input type="text" placeholder="Platform Label" ng-model="updateCtrl.platformLabel">
       <label class="form-label">Platform Label:</label>
 
-      <select ng-model="updateCtrl.devices">
+      <input type="text" placeholder="Devices" ng-model="updateCtrl.devices">
+      <label class="form-label">Devices:</label>
+
+      <!--<select ng-model="updateCtrl.devices">
         <option value="DEVICE">Device</option>
         <option value="SENSOR">Sensor</option>
         <option value="ACTUATOR">Actuator</option>
@@ -73,13 +76,13 @@
       <label class="form-label">Sensor Id:</label>
 
       <input type="text" placeholder="Sensor Type" ng-model="updateCtrl.sensorType">
-      <label class="form-label">Sensor Type:</label>
+      <label class="form-label">Sensor Type:</label>-->
 
       <hr class="line">
 
-      <button type="submit" class="info-button" ng-click="updateCtrl.createDeployment()">
+    <!--  <button type="submit" class="info-button" ng-click="updateCtrl.updateDeployment()">
         <span>Update</span>
-      </button>
+      </button>-->
 
     </form>
 
