--- a/src/main/webapp/views/deployment-manager.html
+++ b/src/main/webapp/views/deployment-manager.html
@@ -5,10 +5,10 @@
       <h3>Deployment Installations</h3>
     </div>
     <div class="option-header-right">
-      <div class="square-header-button" title="Delete Deployment Installation"
+      <!--<div class="square-header-button" title="Delete Deployment Installation"
            ng-click="deployCtrl.goToDeleteDeployment()">
         <span class="glyphicon glyphicon-trash"></span>
-      </div>
+      </div>-->
       <div class="square-header-button" title="Create Deployment Installation"
            ng-click="deployCtrl.goToCreateDeployment()">
         <span class="glyphicon glyphicon-plus"></span>
@@ -28,12 +28,6 @@
         <br class="jump-line">
         <span class="option-platform">{{deployment.date}}</span>
       </div>
-
-<!--      <div class="option-name-container" ng-click="deployCtrl.goToDeploymentInfo()">
-        <span class="option-name">Installation Name</span>
-        <br class="jump-line">
-        <span class="option-platform">Date</span>
-      </div>-->
 
       <div class="option-buttons-container">
         <div class="square-option-device-button" ng-click="deployCtrl.goToUpdateDeployment()">
