--- a/src/main/webapp/views/update-deployment.html
+++ b/src/main/webapp/views/update-deployment.html
@@ -13,7 +13,7 @@
 
     <form class="add-form" name="add-device">
 
-      <input type="text" placeholder="Id" ng-model="updateCtrl.id">
+      <input type="text" disabled placeholder="Id" ng-model="updateCtrl.id">
       <label class="form-label">Id:</label>
 
       <div class="info-left">
@@ -23,66 +23,39 @@
         {{updateCtrl.date | date: 'dd-MM-yyyy HH:mm:ss'}}
       </div>
 
-      <input type="text" placeholder="Location" ng-model="updateCtrl.location">
+      <input type="text" disabled placeholder="Location" ng-model="updateCtrl.location">
       <label class="form-label">Location:</label>
 
       <hr class="line">
 
-      <input type="text" placeholder="Organization Id" ng-model="updateCtrl.organizationId">
+      <input type="text" disabled placeholder="Organization Id" ng-model="updateCtrl.organizationId">
       <label class="form-label">Organization Id:</label>
 
-      <input type="text" placeholder="Organization Label" ng-model="updateCtrl.organizationLabel">
+      <input type="text" disabled placeholder="Organization Label" ng-model="updateCtrl.organizationLabel">
       <label class="form-label">Organization Label:</label>
 
       <hr class="line">
 
-      <input type="text" placeholder="Platform Id" ng-model="updateCtrl.platformId">
+      <input type="text" disabled placeholder="Platform Id" ng-model="updateCtrl.platformId">
       <label class="form-label">Platform Id:</label>
 
-      <input type="text" placeholder="Platform Label" ng-model="updateCtrl.platformLabel">
+      <input type="text" disabled placeholder="Platform Label" ng-model="updateCtrl.platformLabel">
       <label class="form-label">Platform Label:</label>
 
-      <input type="text" placeholder="Devices" ng-model="updateCtrl.devices">
       <label class="form-label">Devices:</label>
 
-      <!--<select ng-model="updateCtrl.devices">
-        <option value="DEVICE">Device</option>
-        <option value="SENSOR">Sensor</option>
-        <option value="ACTUATOR">Actuator</option>
-      </select>
-      <label class="form-label">Devices:</label>
+      <div ng-repeat="device in updateCtrl.devices">
+        <input type="text" disabled placeholder="Devices" ng-model=device>
+      </div>
 
       <hr class="line">
 
-      <input type="text" placeholder="Device Id" ng-model="updateCtrl.deviceId">
-      <label class="form-label">Device Id:</label>
+      <input type="text" placeholder="Platform Label" ng-model="updateCtrl.newDevicesId">
+      <label class="form-label">New Devices Id:</label>
 
-      <input type="text" placeholder="Device Label" ng-model="updateCtrl.deviceLabel">
-      <label class="form-label">Device Label:</label>
-
-      <input type="text" placeholder="Device Type" ng-model="updateCtrl.deviceType">
-      <label class="form-label">Device Type:</label>
-
-      <select ng-model="updateCtrl.sensors">
-        <option value="DEVICE">Device</option>
-        <option value="SENSOR">Sensor</option>
-        <option value="ACTUATOR">Actuator</option>
-      </select>
-      <label class="form-label">Sensors:</label>
-
-      <hr class="line">
-
-      <input type="text" placeholder="Sensor Id" ng-model="updateCtrl.sensorId">
-      <label class="form-label">Sensor Id:</label>
-
-      <input type="text" placeholder="Sensor Type" ng-model="updateCtrl.sensorType">
-      <label class="form-label">Sensor Type:</label>-->
-
-      <hr class="line">
-
-    <!--  <button type="submit" class="info-button" ng-click="updateCtrl.updateDeployment()">
-        <span>Update</span>
-      </button>-->
+      <button type="submit" class="info-button" ng-click="updateCtrl.addDevices()">
+        <span>Add Devices</span>
+      </button>
 
     </form>
 
